--- a/pages/Widgets/Broadcast.mdx
+++ b/pages/Widgets/Broadcast.mdx
@@ -2,7 +2,7 @@ import { Broadcast } from "/components/Broadcast";
 
 # Broadcast Widget
 
-This tutorial will guide you on how to create a simple `Broadcast` component that enables the user to broadcast messages to one or many specified Ethereum addresses.
+This `Broadcast` widget enables the user to broadcast messages to one or many specified Ethereum addresses.
 
 <div className="widget-container">
   <Broadcast
@@ -331,7 +331,7 @@ For example, when using the `Subscribe` or `Inbox` widgets, you should provide a
 ```
 
 ```jsx
-<Inbox
+<FloatingInbox
   // Other props
   wallet={signer}
 />
