--- a/pages/Widgets/Buttons.mdx
+++ b/pages/Widgets/Buttons.mdx
@@ -2,7 +2,7 @@ import { Button } from "/components/Button";
 
 # Buttons Widget
 
-The `Button` widget displays a dropdown with deeplink buttons for different apps. This tutorial will guide you through the process of integrating this widget into your project.
+The `Button` widget displays a dropdown with deeplink buttons for different apps.
 
 <div className="widget-container">
   <Button
