--- a/pages/Widgets/FloatingInbox-hooks.mdx
+++ b/pages/Widgets/FloatingInbox-hooks.mdx
@@ -1,8 +1,8 @@
-import { FloatingInbox } from "/components/FloatingInbox";
+import { FloatingInbox } from "/components/FloatingInbox-hooks";
 
-# Floating Inbox
+# Floating Inbox (React Hooks)
 
-The `Inbox` widget is a floating messaging component designed to allow for integrating web3 messaging in any website.
+The `Inbox` widget is a floating messaging component designed to allow for integrating web3 messaging in any website. Uses React SDK hooks.
 
 <div className="widget-container">
   <FloatingInbox env="production" />
