--- a/pages/Widgets/ContactPage.mdx
+++ b/pages/Widgets/ContactPage.mdx
@@ -3,7 +3,7 @@ import Head from "next/head";
 
 # Contact Page Widget
 
-The `Link` widget is a React component that displays a page based on its ENS or domain and shows different buttons for contacting through XMTP. This tutorial will guide you through the process of creating such a widget.
+The `Link` widget is a React component that displays a page based on its ENS or domain and shows different buttons for contacting through XMTP.
 
 <div className="widget-container Link">
   <ContactPage
@@ -120,7 +120,6 @@ export function ContactPage({
       transition: "color 0.6s cubic-bezier(0.22, 1, 0.36, 1)",
       textDecoration: "none",
       marginBottom: "30px",
-      // existing styles...
       backgroundColor: isLoadingResolveDomain ? "lightgrey" : "white",
       cursor: isLoadingResolveDomain ? "not-allowed" : "pointer",
     },
