--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,32 +1,37 @@
 # XMTP Prototypes
 
-## Installation
+### Installation
 
 ```bash
 bun install
 bun start
 ```
 
-## Prototypes
+### Tutorials
 
-- [**Subscribe**](https://docs.xmtp.org/docs/integrations/Subscribe): Subscribe to another wallet, newsletter, company or campaign.
+- [Subscribe to a newsletter with XMTP](/Tutorials/Subscribe)
+- [Broadcast a message to multiple wallets](/Tutorials/Broadcast)
 
-- [**Enable**](https://docs.xmtp.org/docs/integrations/Enable): Button for enabling XMTP identity for the first time.
+### Widgets
 
-- [**Buttons**](https://docs.xmtp.org/docs/integrations/Button): Styled buttons with a dropdown showcasing different clients.
+- [Subscribe](/Widgets/Subscribe): Subscribe to another wallet, newsletter, company or campaign.
 
-- [**Profile Card**](https://docs.xmtp.org/docs/integrations/ProfileCard): This feature displays a user's profile card with a link to message directly.
+- [Enable](/Widgets/Enable): Button for enabling XMTP identity for the first time.
 
-- [**Contact Link**](https://docs.xmtp.org/docs/integrations/ContactLink): Linked image-only logo to put on footers, headers, navbars, profiles, etc.
+- [Buttons](/Widgets/Buttons): Styled buttons with a dropdown showcasing different clients.
 
-- [**Floating Inbox**](https://docs.xmtp.org/docs/integrations/FloatingInbox): Embeddable web bottom right chat widget with content types and js sdk.
+- [Profile Card](/Widgets/ProfileCard): This feature displays a user's profile card with a link to message directly.
 
-- [**Floating Inbox (Text)**](https://docs.xmtp.org/docs/integrations/FloatingInboxText): Embeddable web bottom right chat widget with only text.
+- [Contact Link](/Widgets/ContactLink): Linked image-only logo to put on footers, headers, navbars, profiles, etc.
 
-- [**Floating Inbox (Hooks)**](https://docs.xmtp.org/docs/integrations/FloatingInboxHooks): Inbox built with the react sdk hooks and only text.
+- [Floating Inbox](/Widgets/FloatingInbox): Embeddable web bottom right chat widget with content types and js sdk.
 
-- [**Floating Inbox (Hooks) PWA**](https://docs.xmtp.org/docs/integrations/FloatingInboxHooksPWA): Inbox built with the react sdk and hooks in PWA mode.
+- [Floating Inbox (Text)](/Widgets/FloatingInbox-text): Embeddable web bottom right chat widget with only text.
 
-- [**Broadcast**](/Broadcast): Broadcast widgets for sending a message to multiple wallets.
+- [Floating Inbox (Hooks)](/Widgets/FloatingInbox-hooks): Inbox built with the react sdk hooks and only text.
 
-- [**Contact Page**](https://docs.xmtp.org/docs/integrations/ContactPage): Page that opens a XMTP inboxes with deeplinking and metadata from ENS.
+- [Floating Inbox (Hooks) PWA](/Widgets/FloatingInbox-hooks): Inbox built with the react sdk and hooks in PWA mode.
+
+- [Broadcast](/Widgets/Broadcast): Broadcast widgets for sending a message to multiple wallets.
+
+- [Contact Page](/Widgets/ContactPage): Page that opens a XMTP inboxes with deeplinking and metadata from ENS.
