--- a/pages/Widgets/Broadcast.mdx
+++ b/pages/Widgets/Broadcast.mdx
@@ -2,7 +2,7 @@ import { Broadcast } from "/components/Broadcast";
 
 # Broadcast Widget
 
-This `Broadcast` widget enables the user to broadcast messages to one or many specified Ethereum addresses.
+This widget enables the user to broadcast messages to one or many specified Ethereum addresses.
 
 <div className="widget-container">
   <Broadcast
