--- a/pages/Widgets/Contact/ContactLink.mdx
+++ b/pages/Widgets/Contact/ContactLink.mdx
@@ -2,7 +2,7 @@ import { ContactLink } from "/components/ContactLink";
 
 # Contact Link Widget
 
-The `ContactLink` widget is a React component that displays a button. When clicked, it opens a contact form for the specified ENS or domain.
+This widget is a React component that displays a button. When clicked, it opens a contact form for the specified ENS or domain.
 
 <div className="widget-container ">
   <ContactLink
