--- a/pages/Widgets/Contact/ContactPage.mdx
+++ b/pages/Widgets/Contact/ContactPage.mdx
@@ -1,9 +1,8 @@
 import { ContactPage } from "/components/ContactPage";
-import Head from "next/head";
 
 # Contact Page Widget
 
-The `Link` widget is a React component that displays a page based on its ENS or domain and shows different buttons for contacting through XMTP.
+This is a React component that displays a page based on its ENS or domain and shows different buttons for contacting through XMTP.
 
 <div className="widget-container Link">
   <ContactPage
