--- a/pages/Widgets/Subscribe.mdx
+++ b/pages/Widgets/Subscribe.mdx
@@ -132,7 +132,15 @@ export function Subscribe({
   // Helper function to get the Ethereum address from the signer object
   const getAddress = async (signer) => {
     try {
-      return await signer?.getAddress();
+      if (signer && typeof signer.getAddress === "function") {
+        return await signer.getAddress();
+      }
+      if (signer && typeof signer.getAddresses === "function") {
+        //viem
+        const [address] = await signer.getAddresses();
+        return address;
+      }
+      return null;
     } catch (e) {
       console.log(e);
     }
