--- a/pages/Widgets/Contact/Buttons.mdx
+++ b/pages/Widgets/Contact/Buttons.mdx
@@ -2,7 +2,7 @@ import { Button } from "/components/Button";
 
 # Buttons Widget
 
-The `Button` widget displays a dropdown with deeplink buttons for different apps.
+This widget displays a dropdown with deeplink buttons for different apps.
 
 <div className="widget-container">
   <Button
