--- a/pages/Widgets/FloatingInbox-text.mdx
+++ b/pages/Widgets/FloatingInbox-text.mdx
@@ -2,7 +2,7 @@ import { FloatingInbox } from "/components/FloatingInbox-text";
 
 # Floating Inbox (Text)
 
-The `Inbox` widget is a floating messaging component designed to allow for integrating web3 messaging in any website. Uses the JS sdk and only text content types.
+This widget is a floating messaging component designed to allow for integrating web3 messaging in any website. Uses the JS sdk and only text content types.
 
 <div className="widget-container">
   <FloatingInbox env="production" />
@@ -214,13 +214,19 @@ export function Inbox({ wallet, env, relative = false }) {
 
   const getAddress = async (signer) => {
     try {
-      return await signer?.getAddress();
+      if (signer && typeof signer.getAddress === "function") {
+        return await signer.getAddress();
+      }
+      if (signer && typeof signer.getAddresses === "function") {
+        //viem
+        const [address] = await signer.getAddresses();
+        return address;
+      }
+      return null;
     } catch (e) {
       console.log(e);
-      console.log("entra3");
     }
   };
-
   // Function to initialize XMTP with keys
   const initXmtpWithKeys = async function () {
     // If signer is not available, logout and return
