--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -16,6 +16,7 @@ bun start
 - [Subscribe to a newsletter with XMTP](/Tutorials/Subscribe)
 - [Broadcast a message to multiple wallets](/Tutorials/Broadcast)
 - [Create a Floating Inbox widget with XMTP](/Tutorials/FloatingInbox)
+- [How to Create an ENS + XMTP Contact Page in React](/Tutorials/ContactPage)
 
 ### Widgets
 
