--- a/pages/Widgets/FloatingInbox-hooks.mdx
+++ b/pages/Widgets/FloatingInbox-hooks.mdx
@@ -512,27 +512,18 @@ export const ConversationContainer = ({
   };
 
   const getRelativeTimeLabel = (dateString) => {
-    const date = new Date(dateString);
-    const now = new Date();
-
-    const diff = now.getTime() - date.getTime();
-    const diffSeconds = Math.floor(diff / 1000);
+    const diff = new Date() - new Date(dateString);
     const diffMinutes = Math.floor(diff / 1000 / 60);
     const diffHours = Math.floor(diff / 1000 / 60 / 60);
     const diffDays = Math.floor(diff / 1000 / 60 / 60 / 24);
     const diffWeeks = Math.floor(diff / 1000 / 60 / 60 / 24 / 7);
 
-    if (diffSeconds < 60) {
-      return "now";
-    } else if (diffMinutes < 60) {
+    if (diffMinutes < 60)
       return `${diffMinutes} minute${diffMinutes > 1 ? "s" : ""} ago`;
-    } else if (diffHours < 24) {
+    if (diffHours < 24)
       return `${diffHours} hour${diffHours > 1 ? "s" : ""} ago`;
-    } else if (diffDays < 7) {
-      return `${diffDays} day${diffDays > 1 ? "s" : ""} ago`;
-    } else {
-      return `${diffWeeks} week${diffWeeks > 1 ? "s" : ""} ago`;
-    }
+    if (diffDays < 7) return `${diffDays} day${diffDays > 1 ? "s" : ""} ago`;
+    return `${diffWeeks} week${diffWeeks > 1 ? "s" : ""} ago`;
   };
   const isValidEthereumAddress = (address) => {
     return /^0x[a-fA-F0-9]{40}$/.test(address);
@@ -644,7 +635,6 @@ export const ConversationContainer = ({
       )}
       {selectedConversation && (
         <MessageContainer
-          client={client}
           conversation={selectedConversation}
           searchTerm={searchTerm}
           selectConversation={selectConversation}
@@ -764,7 +754,6 @@ export const MessageContainer = ({
                     key={message.id}
                     message={message}
                     senderAddress={message.senderAddress}
-                    client={client}
                   />
                 );
               })}
