--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -17,6 +17,7 @@ bun start
 - [Broadcast a message to multiple wallets](/Tutorials/Broadcast)
 - [Create a Floating Inbox widget with XMTP](/Tutorials/FloatingInbox)
 - [How to Create an ENS + XMTP Contact Page in React](/Tutorials/ContactPage)
+- [Understanding and Building Portable Consent in XMTP](/Tutorials/PortableConsent)
 
 ### Widgets
 
