FloatingInbox-text consent mvp

--- a/pages/Tutorials/PortableConsent.mdx
+++ b/pages/Tutorials/PortableConsent.mdx
@@ -5,7 +5,7 @@ import { FloatingInbox } from "/components/FloatingInbox-text";
 Portable consent is an essential feature in XMTP that empowers users to manage who can send them messages. This comprehensive guide walks you through how to enable, manage, and synchronize this feature using the XMTP SDK's Contacts class.
 
 <div className="widget-container" style={{ padding: "0px", height: "400px" }}>
-  <FloatingInbox env="production" isContained={true} isConsent={false} />
+  <FloatingInbox env="production" isContained={true} isConsent={true} />
 </div>
 
 ### Enabling Portable Consent
