--- a/pages/Widgets/Subscribe.mdx
+++ b/pages/Widgets/Subscribe.mdx
@@ -5,45 +5,45 @@ import { Subscribe } from "/components/Subscribe";
 This component allows users to subscribe to a Dapp through XMTP. It includes callbacks for managing subscribers lists.
 
 <div className="widget-container">
-  <Subscribe
-    theme="default"
-    size="medium"
-    onSubscribe={(address) => console.log("New subscriber: " + address)}
-    onUnsubscribe={(address) => console.log("Unsubscribed: " + address)}
-    onError={(address) => console.log("Error subscribing: " + address)}
+    <Subscribe
+    onConsentChange={(address, state) => {
+      console.log("New subscriber: ", address, state);
+      let subscriber = subscribeArray.find(sub => sub.address === address);
+      if (subscriber) subscriber.state = state;
+      else subscribeArray.push({ address, state });
+
+      document.getElementById("subscribeArray").innerText =
+        "subscribeArray:"+JSON.stringify(subscribeArray);
+    }}
+    onError={(error) => console.log("Error subscribing: " + error)}
     env="production"
-  />
+
+/>
+
+<div
+  id="subscribeArray"
+  style={{ textAlign: "center", fontSize: "12px" }}
+></div>
+
 </div>
 
 ### Props
 
-- `theme`: (Optional) Set the theme. Available options: 'default', 'dark', 'light'. Default is 'default'.
-- `size`: (Optional) Set the button size. Available options: 'small', 'medium', 'large'. Default is 'medium'.
 - `wallet`: (Optional) An instance of ethers.js signer.
-- `checkSubscriptionStatus`: (Required) A function that checks the subscription status of a given address.
-- `onSubscribe`: (Required) A callback function that is called when a new subscription is made.
-- `onUnsubscribe`: (Required) A callback function that is called when a subscription is cancelled.
-- `onError`: (Required) A callback function that is called when an error occurs during subscription or unsubscription.
-- `env`: XMTP developer environment. Read more [here](https://xmtp.org/docs/build/authentication#environments)
-- `labels`: (Optional) An object that contains the labels for different states of the component.
+- `env`: (Optional) XMTP developer environment. Read more [here](https://xmtp.org/docs/build/authentication#environments)
+- `label`: (Optional) A string that sets the label for the subscribe button. Default is "Subscribe with your wallet".
+- `onConsentChange`: (Optional) A callback function that is called when the consent state of a given address changes.
+- `onError`: (Optional) A callback function that is called when an error occurs during the consent change process.
 
 ### Usage
 
 ```jsx
 <Subscribe
-  theme="default"
-  size="medium"
-  wallet={signer}
-  checkSubscriptionStatus={(address) => checkSubscriptionStatus(address)}
-  onSubscribe={(address) => console.log("New subscriber: " + address)}
-  onUnsubscribe={(address) => console.log("Unsubscribed: " + address)}
-  onError={(address) => console.log("Error subscribing: " + address)}
-  labels = {
-    loading: "Loading...",
-    subscribed: "Subscribed",
-    unsubscribed: "Unsubscribed",
-    default: "Subscribe with your wallet",
-  };
+  onConsentChange={(address, state) => {
+    console.log("New subscriber: ", address, state);
+  }}
+  onError={(error) => console.log("Error subscribing: " + error)}
+  env="production"
 />
 ```
 
@@ -58,39 +58,35 @@ npm install @xmtp/xmtp-js ethers
 Copy paste the component into your project
 
 ```jsx
-// Import necessary libraries for React and state management
 import React, { useEffect, useState } from "react";
-// Import the XMTP SDK for subscription management
-import { Client } from "@xmtp/react-sdk";
-// Import ethers library for Ethereum wallet interaction
+import { Client } from "@xmtp/xmtp-js";
 import { ethers } from "ethers";
 
-// Define the Subscribe component
 export function Subscribe({
-  theme = "default",
-  size = "medium",
   wallet,
-  onSubscribe,
-  onUnsubscribe,
-  checkSubscriptionStatus,
+  onConsentChange,
   onError,
   env,
-  labels = {
-    loading: "Loading...",
-    subscribed: "Subscribed",
-    unsubscribed: "Unsubscribed",
-    default: "Subscribe with your wallet",
-  },
+  label = "Subscribe with your wallet",
 }) {
-  // Initialize state variables
-  const [loading, setLoading] = useState(false); // Indicates if the component is in a loading state
-  const [subscriptionStatus, setSubscriptionStatus] = useState("none"); // Tracks the subscription status
+  // State for loading status
+  const [loading, setLoading] = useState(false);
+  // State for subscription status
+  const [subscriptionStatus, setSubscriptionStatus] = useState(label);
+  // State for random wallet address
+  const [randomWalletAddress, setRandomWalletAddress] = useState(null);
+  // State for signer
+  const [signer, setSigner] = useState(null);
+  // State for consent log
+  const [consentLog, setConsentLog] = useState("");
 
   const styles = {
     SubscribeButtonContainer: {
       position: "relative",
       display: "inline-block",
       borderRadius: "5px",
+      textAlign: "center",
+      alignItems: "center",
     },
     SubscribeButton: {
       display: "inline-flex",
@@ -103,21 +99,13 @@ export function Subscribe({
       cursor: "pointer",
       transition: "background-color 0.3s ease",
       fontWeight: "bold",
-      color: theme === "dark" ? "#ffffff" : "#333333",
-      backgroundColor:
-        theme === "dark" ? "#333333" : theme === "light" ? "#fff" : "#ededed",
-      border: theme === "light" ? "1px solid #333333" : "none",
-      fontSize: size === "large" ? "16px" : "12px",
-    },
-    logoIcon: {
-      width: size === "medium" ? "12px" : size === "large" ? "16px" : "10px",
-      height: size === "medium" ? "12px" : size === "large" ? "16px" : "10px",
-      marginRight: "5px",
-      transition: "all 0.5s ease",
+      color: "#333333",
+      backgroundColor: "#ededed",
+      border: "none",
+      fontSize: "12px",
     },
   };
 
-  // Helper function to get the Ethereum address from the signer object
   const getAddress = async (signer) => {
     try {
       if (signer && typeof signer.getAddress === "function") {
@@ -134,7 +122,6 @@ export function Subscribe({
     }
   };
 
-  // Helper function to connect to the user's Ethereum wallet
   const connectWallet = async () => {
     if (typeof window.ethereum !== "undefined") {
       try {
@@ -149,98 +136,78 @@ export function Subscribe({
     }
   };
 
-  // Function executed when the user clicks the subscribe button
+  // Define the handleClick function
   const handleClick = async () => {
-    setLoading(true);
-    let currentSigner = wallet || (await connectWallet());
-    if (currentSigner) {
-      await connect(currentSigner);
-    }
-    setLoading(false);
-  };
-
-  // Function to connect to XMTP and manage subscription
-  const connect = async (signer) => {
     try {
-      const address = await getAddress(signer);
-      let isSubscribed = false;
-      // Use the provided function to check if the user is already subscribed
-      if (checkSubscriptionStatus)
-        isSubscribed = await checkSubscriptionStatus(address);
-      // If subscribed, unsubscribe; otherwise, subscribe
-      if (isSubscribed) {
-        await unsubscribe(signer);
-      } else {
-        await subscribe(signer);
+      // Set loading to true
+      setLoading(true);
+      // Check if signer exists, if not create a new one
+      let signerTemp = signer ? signer : null;
+      if (!signerTemp) {
+        // Create a random wallet if wallet does not exist
+        let randomWallet = wallet || ethers.Wallet.createRandom();
+        // Create a new client with the random wallet
+        signerTemp = await Client.create(randomWallet, { env: env });
+        // Set the signer
+        setSigner(signerTemp);
       }
+      // Set the random wallet address
+      setRandomWalletAddress(signerTemp.address);
+
+      // Get the subscriber address
+      const subscriberAddress = await getAddress(await connectWallet());
+      // Refresh the consent list
+      signerTemp.contacts.refreshConsentList();
+      // Get the consent state of the subscriber
+      let state = signerTemp.contacts.consentState(subscriberAddress);
+      // If the state is unknown or blocked, allow the subscriber
+      if (state == "unknown" || state == "blocked") {
+        await signerTemp.contacts.allow([subscriberAddress]);
+      } else if (state == "allowed") {
+        // If the state is allowed, block the subscriber
+        await signerTemp.contacts.block([subscriberAddress]);
+      }
+      // Refresh the consent list again
+      await signerTemp.contacts.refreshConsentList();
+      // Get the new consent state
+      state = signerTemp.contacts.consentState(subscriberAddress);
+
+      // Create a log message
+      let log =
+        "Address " +
+        subscriberAddress +
+        " subscribed to random wallet: " +
+        signerTemp.address;
+      setConsentLog(log);
+      console.log(log);
+
+      // Set the subscription label
+      setSubscriptionStatus("Consent State: " + state);
+
+      // If onConsentChange function exists, call it with the subscriber address and consent state
+      if (onConsentChange)
+        onConsentChange(
+          subscriberAddress,
+          signerTemp.contacts.consentState(subscriberAddress)
+        );
+
+      // Set loading to false
+      setLoading(false);
     } catch (error) {
-      // Handle errors
+      // If onError function exists, call it with the error
       if (typeof onError === "function") onError(error);
+      // Log the error
       console.log(error);
     }
   };
 
-  // Function to unsubscribe the user using XMTP
-  async function unsubscribe(signer) {
-    const address = await getAddress(signer);
-    // Update the subscription status to 'unsubscribed'
-    setSubscriptionStatus("unsubscribed");
-    // Execute the onUnsubscribe callback, if provided
-    if (onUnsubscribe) onUnsubscribe(address);
-    // Reset the subscription status after 5 seconds
-    setTimeout(() => {
-      setSubscriptionStatus("none");
-    }, 5000);
-  }
-
-  // Function to subscribe the user using XMTP
-  async function subscribe(signer) {
-    // Create a new XMTP client using the signer and environment
-    const xmtp = await Client.create(signer, { env: env });
-    // Update the subscription status to 'subscribed'
-    setSubscriptionStatus("subscribed");
-    // Execute the onSubscribe callback, if provided
-    if (onSubscribe) onSubscribe(xmtp.address);
-    // Reset the subscription status after 5 seconds
-    setTimeout(() => {
-      setSubscriptionStatus("none");
-    }, 5000);
-  }
-
-  // Use effect to check the initial subscription status
-  useEffect(() => {
-    let isMounted = true;
-    const init = async () => {
-      setLoading(true);
-      if (checkSubscriptionStatus && wallet) {
-        const address = await getAddress(wallet);
-        const isSubscribed = await checkSubscriptionStatus(address);
-        if (isMounted) {
-          setSubscriptionStatus(isSubscribed ? "subscribed" : "unsubscribed");
-        }
-      }
-      setLoading(false);
-    };
-    init();
-    return () => {
-      isMounted = false;
-    };
-  }, [checkSubscriptionStatus, wallet]);
-
-  // Render the component
   return (
     <div
       style={styles.SubscribeButtonContainer}
       className={`Subscribe ${loading ? "loading" : ""}`}
     >
       <button style={styles.SubscribeButton} onClick={handleClick}>
-        {loading
-          ? labels.loading
-          : subscriptionStatus === "subscribed"
-          ? labels.subscribed
-          : subscriptionStatus === "unsubscribed"
-          ? labels.unsubscribed
-          : labels.default}
+        {loading ? "Loading... " : subscriptionStatus}
       </button>
     </div>
   );
