--- a/pages/Widgets/FloatingInbox-hooks.mdx
+++ b/pages/Widgets/FloatingInbox-hooks.mdx
@@ -404,6 +404,7 @@ export const ConversationContainer = ({
       display: "flex",
       justifyContent: "space-between",
       alignItems: "center",
+      border: "0px",
       borderBottom: "1px solid #e0e0e0",
       cursor: "pointer",
       backgroundColor: "#f0f0f0",
