consent tutorials review

--- a/pages/Tutorials/Broadcast.mdx
+++ b/pages/Tutorials/Broadcast.mdx
@@ -46,34 +46,55 @@ _For more information check the [FAQs](https://xmtp.org/docs/faq#rate-limiting)_
 
 #### Check which addresses can receive messages
 
-In the `handleBroadcastClick` function, the canMessage method checks which of the wallet addresses from the array can receive messages.
+In the `handleBroadcastClick` function, the `canMessage` method checks which of the wallet addresses from the array can receive messages.
 
 ```jsx
 // Create a new XMTP client with the signer and environment
 const xmtp = await Client.create(signer, { env: env });
 // Check if the client can message the provided wallet addresses
-const broadcasts_canMessage = await xmtp.canMessage(walletAddresses);
+const broadcasts_canMessage = await xmtp.canMessage([walletAddresses]);
 ```
 
 _This will return an array of booleans that correspond to the wallet addresses. If the boolean is true, the address can receive messages. If the boolean is false, the address cannot receive messages._
+
+#### Check if has given consent to the sender
+
+The `isAllowed` method checks if the wallet address has given consent to the sender. If the address has not given consent, the sender cannot send messages to the address. To learn more about consent check out the tutorial
+
+```jsx
+xmtp.contacts.isAllowed(wallet);
+```
+
+#### Refresh the Consent List
+
+To ensure we're working with the most up-to-date information, refresh the consent list before doing the broadcast.
+
+```jsx
+await xmtp.contacts.refreshConsentList();
+```
 
 #### Loop through wallet address array to broadcast
 
 Here, you loop through the `walletAddresses` array. For each address that can receive messages, a new conversation is started and the message is sent.
 
 ```jsx
+// Create a new XMTP client with the signer and environment
+const xmtp = await Client.create(signer, { env: env });
+// Check if the client can message the provided wallet addresses
+const broadcasts_canMessage = await xmtp.canMessage(walletAddresses);
+//Update consent list
+await xmtp.contacts.refreshConsentList();
 // Loop through the wallet addresses
 for (let i = 0; i < walletAddresses.length; i++) {
   const wallet = walletAddresses[i];
   const canMessage = broadcasts_canMessage[i];
-  // If the client can message the wallet address
-  if (canMessage) {
+  // If the address can receive messages and has allowed consent
+  if (canMessage && xmtp.contacts.isAllowed(wallet)) {
     // Create a new conversation with the wallet address
     const conversation = await xmtp.conversations.newConversation(wallet);
-    // Send the broadcast message
+    // Send the broadcast message to the conversation
     const sent = await conversation.send(broadcastMessage);
-    console.log("Sent", sent);
-    // If a success callback was provided, call it with the sent message
+    // If a callback function is provided, call it with the sent message
     if (onMessageSuccess) {
       onMessageSuccess(sent);
     }
@@ -81,9 +102,9 @@ for (let i = 0; i < walletAddresses.length; i++) {
 }
 ```
 
-#### Modal Interface
+#### Popup UI
 
-A modal pops up when the user opts to send a message. This modal contains a text area for the user to input their message.
+A modal pops up when the user opts to send a message. This modal contains a text area for the user to input their message. Also handles `isLoading` and `messageSent` states.
 
 ```jsx
 {
@@ -107,7 +128,7 @@ Copy paste the component into your project
 
 ```jsx
 import React, { useState } from "react";
-import { Client } from "@xmtp/react-sdk";
+import { Client } from "@xmtp/xmtp-js";
 import { ethers } from "ethers";
 
 export function Broadcast({
@@ -252,22 +273,36 @@ export function Broadcast({
       alert("Please enter a message");
       return;
     }
-
     setLoading(true);
 
     try {
+      // Create a new XMTP client with the signer and environment
       const xmtp = await Client.create(signer, { env: env });
+      await xmtp.contacts.refreshConsentList();
+
+      // Check if the client can message the provided wallet addresses
       const broadcasts_canMessage = await xmtp.canMessage(walletAddresses);
+      // Loop through the wallet addresses
       for (let i = 0; i < walletAddresses.length; i++) {
         const wallet = walletAddresses[i];
         const canMessage = broadcasts_canMessage[i];
-        if (canMessage) {
+        // If the address can receive messages and has allowed consent
+        if (canMessage && xmtp.contacts.isAllowed(wallet)) {
+          // Create a new conversation with the wallet address
           const conversation = await xmtp.conversations.newConversation(wallet);
+          // Send the broadcast message to the conversation
           const sent = await conversation.send(broadcastMessage);
           console.log("Sent", sent);
+          // If a callback function is provided, call it with the sent message
           if (onMessageSuccess) {
-            onMessageSuccess(sent); // Call the callback function here
+            onMessageSuccess(sent);
           }
+        } else {
+          // If the address cannot receive messages, log it
+          if (!canMessage) console.log(wallet, " is not on the network");
+          // If the address has not allowed consent, log it
+          if (!xmtp.contacts.isAllowed(wallet))
+            console.log(wallet, " has not allowed consent yet");
         }
       }
       setMessageSent(true);
@@ -360,12 +395,6 @@ export function Broadcast({
 }
 ```
 
-#### Conclusion
+#### Example repo
 
-By following these steps, you should be able to utilize XMTP for broadcasting messages to multiple Ethereum wallet addresses. Remember to be mindful of the rate limit of 1,000 publish requests per 5 minutes imposed by XMTP.
-
-##### Reference Widget
-
-For a complete working example, please refer to this complete widget page.
-
-- [Broadcast Widget](/Widgets/Broadcast)
+- _You can find a complete example of this tutorial in our [xmtp-broadcast](https://github.com/fabriguespe/xmtp-broadcast)_
