--- a/pages/Tutorials/FloatingInbox.mdx
+++ b/pages/Tutorials/FloatingInbox.mdx
@@ -266,12 +266,6 @@ return (
 );
 ```
 
-### Conclusion
+#### Example repo
 
-That's a high-level overview of how to create a floating inbox widget using XMTP. Customize it further according to your requirements.
-
-#### Reference Widget
-
-For a complete working example, please refer to this complete widget page.
-
-- [FloatingInbox Widget](/Widgets/FloatingInbox)
+- _You can find a complete example of this tutorial in our [xmtp-inbox-portable-consent](https://github.com/fabriguespe/xmtp-inbox-portable-consent)_
